tests/good/basic/in4.spl
int sum(int s, int e)
{
    int sum = 0;
    for (i = s to e + 1)
        sum = sum + i;

    return sum;
}

int sum_squares(int s, int e)
{
    int sum = 0;
    for (i = s to e + 1)
        sum = sum + i * i;

    return sum;
}

int main()
{
    printInt(sum(1, 10));
    printInt(sum_squares(1, 10));
    return 0;
}
