tests/bad/basic/function_wrong_param_types.spl
int sum(int a, int b)
{
    return a + b;
}

int main()
{
    int r = sum(1, false);
    printInt(r);
    return 0;
}
